pushing Final Project/final

--- a/index_RP.html
+++ b/index_RP.html
@@ -12,7 +12,7 @@
 			<header>
 				<nav>
 					<a href="#">HOME</a>
-					<a href="images/resume1116.jpg">RESUMÉ</a>
+					<a href="resume.html">RESUMÉ</a>
 					<a href="contact_RP.html">CONTACT</a>
 				</nav>
 				<div id="mainhead">
@@ -32,7 +32,9 @@
 				<a class="lightbox" href="images/img1.jpg" data-caption="Natural health magazine page design" data-fancybox="gallery"><img src="images/thumb1.jpg" alt=""/></a>
 			</div>
 			<footer>
-				
+				<div class="center">
+					<a href="contact_RP.html">contact me</a>
+				</div>
 			</footer>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
