--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>contact info</title>
+	<title>resumé</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,600,600i,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style_RP.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css">
@@ -12,18 +12,16 @@
 		<header class="sub">
 			<nav>
 				<a href="index_RP.html">HOME</a>
-				<a href="resume.html">RESUMÉ</a>
-				<a href="#">CONTACT</a>
+				<a href="#">RESUMÉ</a>
+				<a href="contact_RP.html">CONTACT</a>
 			</nav>
 			<div id="mainhead">
 				<h1>rachel pilvinsky</h1>
 				<h3>DESIGNER <span>|</span> DEVELOPER</h3>
 			</div>
 		</header>
-		<div id="contact">
-			<h2><a href="mailto:rachelp310@gmail.com">rachelp310@gmail.com</a></h2>
-			<h2><a href="tel:1-310-699-6615">310.699.6615</a></h2>
-		</div>
+		<img src="images/resume1116cropped.jpg" class="center">
+		<a href="images/resume1116.jpg" class="resumelink">print-friendly version here</a>
 	</div>
 </body>
 </html>
